Navbar and Hero section created

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,21 +1,66 @@
-
 * {
     background-color: #000000;
+
 }
 
-:root{
+:root {
     --btn-shape-bg-color: rgb(230, 83, 60);
-    --text-color: white;
+    --text-color: rgb(255, 255, 255);
     --para-color: rgba(255, 255, 255, 0.5);
-    --card-bg-color: rgba(34, 34, 34, 0.2);
+    --card-bg-color: rgba(141, 141, 141, 0.486);
 }
 
 .inter-font {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;  
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
-.logo-text{
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.logo-text {
+    font-size: 2em;
+    font-weight: 800;
+    font-style: italic;
+    color: var(--btn-shape-bg-color);
+}
+
+.menu-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px;
+    color: rgb(255, 255, 255);
+}
+
+.menu ul li {
+    list-style: none;
+    margin-right: 47px;
+    /* border: 2px;
+    border-color: gray;
+    border-radius: 46px; */
+}
+
+.menu ul li a {
+    font-size: 1rem;
+    font-weight: 400;
     color: var(--text-color);
-    
+    text-decoration: none;
 }
+
+.menu-button-text {
+    background-color: var(--btn-shape-bg-color);
+}
+
+.menu-button {
+
+    padding: 8px 20px;
+    background-color: var(--btn-shape-bg-color);
+    border-radius: 46px;
+}
+
