--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -10,6 +10,10 @@
     --text-color: rgb(255, 255, 255);
     --para-color: rgba(255, 255, 255, 0.5);
     --card-bg-color: rgba(141, 141, 141, 0.486);
+    --full-body-bg-color: rgb(0, 0, 0);
+}
+body{
+    background-color: var(--full-body-bg-color);
 }
 
 .inter-font {
@@ -17,6 +21,13 @@
     font-optical-sizing: auto;
     font-style: normal;
 }
+
+.mrs-saint-delafield-regular {
+    font-family: "Mrs Saint Delafield", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 
 .header-section {    
     padding: 40px 0px;
@@ -43,14 +54,15 @@ nav {
     align-items: center;
     border: 5px;
     color: rgb(255, 255, 255);
+    border: 1px;
+    border-style: solid;
+    border-color: gray;
+    border-radius: 46px;
 }
 
 .menu ul li {
     list-style: none;
-    margin-right: 47px;
-    /* border: 2px;
-    border-color: gray;
-    border-radius: 46px; */
+    margin-right: 47px;    
 }
 
 .menu ul li a {
@@ -93,4 +105,52 @@ nav {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+.hp-text{
+    max-width: 80%;
+}
+.h-text{
+    font-size: 6.1em;
+    color: var(--text-color);
+    font-weight: bolder;
+    line-height: 0.9em;
+    padding-bottom: 20px;
+
+}
+.diff-text-style{
+    font-size: 1.8em;
+    
+}
+
+.p-text{
+    font-size: 1rem;
+    color: var(--para-color);
+    padding-bottom: 20px;
+}
+
+.two-button{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    justify-content: flex-start;
+}
+
+.hero-buttons{
+    font-size: 1rem;
+    color: var(--text-color);
+    background-color: var(--btn-shape-bg-color);
+    padding: 16px 40px;
+    border: none;
+    border-radius: 46px;
+}
+
+.secnd-hero-buttons{
+    font-size: 1rem;
+    color: var(--para-color);
+    background-color: var(--full-body-bg-color);
+    padding: 16px 40px;
+    border: 2px;
+    border-style: solid;
+    border-color: gray;
+    border-radius: 46px;
 }
