--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -56,7 +56,7 @@ nav {
     color: rgb(255, 255, 255);
     border: 1px;
     border-style: solid;
-    border-color: gray;
+    border-color: rgba(255, 255, 255, 0.1);
     border-radius: 46px;
 }
 
@@ -85,10 +85,11 @@ nav {
 
 .hero-section {
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto;    
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    padding-top: 32px;
 
 }
 
@@ -162,6 +163,21 @@ nav {
     justify-content: flex-start;
 }
 
+.small-card-right{
+    /* display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-evenly;
+    align-items: center; */
+    background-color: var(--card-bg-color);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 260px;
+    right: 140px;
+    padding: 20px 23px;
+    border-radius: 12px;
+}
+
 .small-card-left{
     display: flex;
     flex-direction: row;
@@ -171,8 +187,8 @@ nav {
     background-color: var(--card-bg-color);
     backdrop-filter: blur(10px);
     position: absolute;
-    top: 580px;
-    right: 440px;
+    top: 530px;
+    right: 460px;
     padding: 20px 23px;
     border-radius: 12px;
 
@@ -189,4 +205,45 @@ nav {
     color: var(--text-color);
     font-weight: 600;
     
+}
+.habit-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+}
+.habit-container-text{
+    font-size: 3em;
+    color: var(--text-color);
+    font-weight: 800;
+    margin-bottom: 30px;
+}
+#habit-text{
+    max-width: 45%;    
+}
+.circle-cards{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 70%;
+    margin: 50px auto;
+}
+.circle-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+}
+.circle-img{
+    width: 200px;
+    height: 180px;
+    border-radius: 50%;
+}
+.circle-box-htext{
+    font-size: 1em;
+    color: var(--text-color);
+    padding: 30px 5px;
 }
