--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -393,7 +393,7 @@ select {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    background-image: url(img/trainer1.jpg);
+    background-image: url(../img/trainer1.jpg);
     border-radius: 8px;
 }
 .trainer-card-cameron {
@@ -401,7 +401,7 @@ select {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    background-image: url(img/trainer2.jpg);
+    background-image: url(../img/trainer2.jpg);
     border-radius: 8px;
 }
 .trainer-card-darrell {
@@ -409,7 +409,7 @@ select {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    background-image: url(img/trainer3.jpg);
+    background-image: url(../img/trainer3.jpg);
     border-radius: 8px;
 }
 .trainer-card-dianne {
@@ -417,7 +417,7 @@ select {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    background-image: url(img/trainer4.jpg);
+    background-image: url(../img/trainer4.jpg);
     border-radius: 8px;
 }
 .trainer-card-cody {
@@ -425,7 +425,7 @@ select {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    background-image: url(img/trainer5.jpg);
+    background-image: url(../img/trainer5.jpg);
     border-radius: 8px;
 }
 .trainer-card-theresa {
@@ -433,7 +433,7 @@ select {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    background-image: url(img/trainer6.jpg);
+    background-image: url(../img/trainer6.jpg);
     border-radius: 8px;
 }
 
